k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: grid-webservices
  name: grid-webservices
  namespace: tool-grid-webservices
spec:
  ports:
  - name: http
    port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    name: grid-webservices
  type: ClusterIP
