k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    name: grid-webservices
  name: grid-webservices
  namespace: tool-grid-webservices
spec:
  rules:
  - host: grid-webservices.toolforge.org
    http:
      paths:
      - backend:
          service:
            name: grid-webservices
            port:
              number: 8000
        path: /
        pathType: Prefix
